# Parallel_Computing

./: .gitignore  CMakeLists.txt
1.omp/: How to run.txt
1.omp/#01/: hello_world  hello_world.c
1.omp/#02/: parallel_vector_addition.c
1.omp/#03/: number_of_threds.c
1.omp/#04/: parallel_vector_addition.c  vplusv.xlsx
1.omp/#05/: matrix_vector_product.c  mxv.xlsx  test6.bat
1.omp/#06/: Resulmxm.xlsx  matrix_vector_product.c  test6.bat  test_.bat
1.omp/#07/: test6.bat  test_.bat  vector_plus_vector.c  vplusv.xlsx
1.omp/#08/: merge_sort.c
1.omp/#12/: search_max_element_array.c
1.omp/#13/: fibonacci_numbers.c
2.mpi/: How to run.txt
2.mpi/#15/: hello_world  hello_world.c
2.mpi/#16/: calculate_pi.c
2.mpi/#19/: vector_addition.c
2.mpi/#20/: dot_product_send_recv.c
2.mpi/#22/: matrix_vector_product.c
3.cuda/: How to run.txt
3.cuda/#24/: add_two_numbers.cu
3.cuda/#25/: vector_addition_blocks.cu
3.cuda/#26/: vector_addition_threads.cu
3.cuda/#29/: dot_product.cu
3.cuda/#30/: matrix_addition.cu
4.project/: gauss_cuda.cu  gauss_mpi.c  gayss_omp.c
